# Wasome

./: .gitignore  LICENSE-MIT  README.md  dist-workspace.toml  flake.nix  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  test-cd.yml
ast/src/: expression.rs  lib.rs  symbol.rs
cli/: Cargo.toml  dist-workspace.toml  plan-dist-manifest.json
cli/src/: command.rs  dependencies.rs  error.rs  execute.rs  main.rs  manifest.rs  pipeline.rs  runtime.rs  stdlib.rs  template.rs  workspace.rs
cli/templates/lib/: waso.toml
cli/tests/fixtures/invalid/: waso.toml
cli/tests/fixtures/invalid/src/: main.waso
cli/tests/fixtures/valid/: waso.toml
compiler/: .gitignore  Cargo.toml  Crates.md  code  code.wasm  explanation.md  explanation.typ  flake.nix
compiler/.cargo/: config.toml
compiler/.devcontainer/: Dockerfile  devcontainer.json
compiler/ast/: Cargo.toml
compiler/ast/src/: block.rs  composite.rs  data_type.rs  directory.rs  expression.rs  file.rs  id.rs  lib.rs  statement.rs  symbol.rs  top_level.rs  traversal.rs  type_parameter.rs  visibility.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: context.rs  errors.rs  global_registry.rs  lib.rs  main.rs  main.temp  temp.rs  types.rs  value.rs
compiler/codegen/src/generators/: expression.rs  function.rs  memory.rs  mod.rs  statement.rs
compiler/codegen/src/memory/: mod.rs
compiler/codegen/src/symbols/: enum_information.rs  mod.rs  registry.rs  struct_information.rs  variable.rs
compiler/codegen/src/types/: mod.rs  module.rs  opt_level.rs
compiler/driver/: Cargo.toml
compiler/driver/src/: error.rs  lib.rs  parser_driver.rs  pipeline.rs  program_information.rs  source_collector.rs  source_element.rs
compiler/driver/src/parser_driver/: ast_builder.rs  directory_builder.rs  module_path.rs
compiler/driver/src/pipeline/: basic.rs  combined.rs
compiler/driver/src/source_collector/: source_element.rs
compiler/driver/src/tests/: integration_tests.rs
compiler/driver/tests/: integration_tests.rs
compiler/error/: Cargo.toml  test.waso
compiler/error/src/: diagnostic.rs  error.rs  lib.rs  renderer.rs  snippet.rs  source.rs  syntax_error.rs
compiler/error/tests/: common.rs  integration_tests.rs
compiler/error_old/: Cargo.toml
compiler/error_old/src/: error.rs  lib.rs  snippet.rs
compiler/io/: Cargo.toml
compiler/io/src/: lib.rs  traits.rs  wasome_loader.rs
compiler/lexer/: Cargo.toml
compiler/lexer/src/: lib.rs  tokens.rs
compiler/lexer/tests/: brackets_test.rs  comments_test.rs  datatypes_test.rs  import_test.rs  keywords_test.rs  locations_test.rs  loops_test.rs  operators_test.rs  token_values_test.rs  values_test.rs
compiler/linker/: Cargo.toml
compiler/linker/src/: build.rs  error.rs  lib.rs  lld.rs
compiler/middle_end/parser/: Cargo.toml
compiler/middle_end/parser/src/: composite_parser.rs  error.rs  expression.rs  expression_parser.rs  function_parser.rs  input.rs  lib.rs  misc.rs  misc_parsers.rs  statement.rs  statement_parser.rs  top_level.rs  top_level_parser.rs
compiler/middle_end/parser/tests/: integration_tests.rs  leading_empty_lines.waso  misc.waso  missing_statement_separator.waso
compiler/middle_end/parser/tests/test_programms/: max.waso  missing_import_separator.waso  sum_n.waso
compiler/middle_end/parser/tests/test_programms/modular_arithmetic/: modular_add.waso  modular_mul.waso
compiler/middle_end/parser_driver/: Cargo.toml
compiler/middle_end/semantic_analyzer/: Cargo.toml
compiler/middle_end/semantic_analyzer/src/: directory_sa.rs  error_sa.rs  expression_sa.rs  file_sa.rs  file_symbol_mapper.rs  function_symbol_mapper.rs  global_system_collector.rs  lib.rs  mics_sa.rs  statement_sa.rs  symbol.rs  symbol_mapper.rs  symbol_translation.rs  top_level_sa.rs
compiler/middle_end/semantic_analyzer/src/symbol/: file_symbol_mapper.rs  function_symbol_mapper.rs  global_system_collector.rs  syntax_element_map.rs  syntax_element_with_type_parameter_guard.rs
compiler/middle_end/semantic_analyzer/src/symbol_translation/: file_symbol_mapper.rs  function_symbol_mapper.rs  global_system_collector.rs  syntax_element_map.rs  syntax_element_with_type_parameter_guard.rs
compiler/middle_end/semantic_analyzer/tests/: error_tests.rs  integration_tests.rs
compiler/middle_end/tests/: test_programs
compiler/parser_driver/: Cargo.toml
compiler/parser_driver/src/: parser_driver.rs
compiler/parser_driver/tests/: integration_tests.rs
compiler/shared/: Cargo.toml
compiler/shared/src/: code_file.rs  code_reference.rs  lib.rs  program_information.rs
compiler/source/: Cargo.toml
compiler/source/src/: lib.rs  loader.rs  source.rs  types.rs
compiler/source/tests/: integration_io_tests.rs  integration_tests.rs
compiler/typed_ast/src/: block.rs  data_type.rs  expression.rs  lib.rs  statement.rs  symbol.rs  top_level.rs  traversal.rs
docs/: IMPORTS-DEPENDENCIES.md  LANGUAGE-SPECIFICATION.md
docs/examples/: if.waso  if_conditional.waso  loop.waso  operator.waso  operators.waso  struct.waso  structs.waso
docs/examples/single_file/: enum.waso  is_even.waso  (+12 more)
formatter/: Cargo.toml
formatter/src/: classify.rs  config.rs  constants.rs  engine.rs  formatter.rs  indent.rs  lib.rs  main.rs  reorder.rs  spacing.rs  tests.rs
formatter/tests/: examples_integration_test.rs  indent_test.rs  reorder_test.rs  spacing_test.rs
stdlib/.cargo/: config.toml
stdlib/rust/: Cargo.toml
stdlib/rust/.cargo/: config.toml
stdlib/rust/src/: lib.rs  plattform.rs  wasome_mem.rs  wasome_option.rs  wasome_string.rs  wasome_vec.rs
stdlib/rust/src/plattform/: runtime.rs  web.rs
stdlib/wasome/: waso.toml
website/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
website/backend/: Cargo.toml  Dockerfile  Dockerfile.sandbox
website/backend/src/: compile.rs  config.rs  logging.rs  main.rs  rate_limit.rs  security.rs  session.rs  webhook.rs
website/scripts/: fetch-examples.js
website/src/: App.svelte  app.css
(+60 files in other folders)
