[package]
name = "waso"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waso"
path = "src/main.rs"

[dependencies]
driver = { path = "../compiler/driver/" }
error = { path = "../compiler/error/" }
io = { path = "../compiler/io/" }
source = { path = "../compiler/source/" }
clap = { version = "4.5.57", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.1"
thiserror = "2.0.18"
include_dir = "0.7.4"
