[package]
name = "cli"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Randware/Wasome"
description = "The WebAssembly Language for Everyone"
homepage = "https://wasome.dev/"

[[bin]]
name = "waso"
path = "src/main.rs"

[dependencies]
driver = { path = "../compiler/driver/" }
error = { path = "../compiler/error/" }
io = { path = "../compiler/io/" }
source = { path = "../compiler/source/" }
clap = { version = "4.5.57", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.1"
thiserror = "2.0.18"
include_dir = "0.7.4"

[dev-dependencies]
tempfile = "3.26.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

