[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.8", features = ["llvm21-1"] }
thiserror = "2"
# TODO: Change to workspace dependencie!
# (crate also gets used by error handling -> error handling is not merged yet)
bon = "3"
source = { path = "../source" }
