[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
source = { path = "../source" }
parser = { path = "../middle_end/parser" }
semantic_analyzer = { path = "../middle_end/semantic_analyzer" }
io = { path = "../io" }
error = { path ="../error" }

[dev-dependencies]
source = { path = "../source", features = ["test-utils"] }
tempfile.workspace = true
