[package]
name = "stdlib"
version = "0.1.0"
edition = "2024"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["staticlib"]

[dependencies]
# Use wasi crate instead of std for I/O
wee_alloc = "0.4.5"

[profile.release]
panic = "abort"
strip = true
# Makes the binary size smaller
lto = true
