[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tempfile = "3.10.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22.1"
uuid = { version = "1.8", features = ["v4"] }
flate2 = "1.0"
chrono = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
