[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = { version = "1.0.0-alpha.8", features = ["regex"] }
ast = { path = "../../ast"}
lexer = { path = "../../lexer"}
shared = { path = "../../shared"}
source = { path = "../../source"}
io = { path = "../../io"}

[dev-dependencies]
tempfile = "3"

