[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = { version = "0.12.0", features = ["regex"] }
ast = { path = "../../ast"}
lexer = { path = "../../lexer"}
source = { path = "../../source"}
io = { path = "../../io"}

[dev-dependencies]
source = { path = "../../source", features = ["test-utils"] }
tempfile.workspace = true
