[package]
name = "semantic_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { path = "../../ast"}
shared = { path = "../../shared" }
typed-arena = "2.0.2"

[dev-dependencies]
tempfile.workspace = true
driver = { path = "../../driver"}
source = { path = "../../source" }
io = { path = "../../io" }
