[package]
name = "semantic_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { path = "../../ast"}
source = { path = "../../source"}
typed-arena = "2.0.2"

[dev-dependencies]
tempfile.workspace = true
source = { path = "../../source", features = ["test-utils"] }
driver = { path = "../../driver"}
io = { path = "../../io" }
